OpenPAM Lycopsida						2011-??-??

 - ENHANCE: removed static build autodetection, which didn't work anyway.
   Use an explicit, user-specified preprocessor variable instead.
============================================================================
OpenPAM Hydrangea						2007-12-21

 - ENHANCE: when compiling with GCC, mark up API functions with GCC
   attributes where appropriate.

 - BUGFIX: fixed numerous warnings uncovered by GCC 4.

 - ENHANCE: building the documentation is now optional.

 - ENHANCE: corrected a number of mistakes and style issues in the
   build system.

 - ENHANCE: API function arguments are now const where appropriate, to
   match corresponding changes in the Solaris PAM and Linux-PAM APIs.

 - ENHANCE: corrected a number of C namespace violations.

 - ENHANCE: the module cache has been removed, allowing long-lived
   applications to pick up module changes.  This also allows multiple
   threads to use PAM simultaneously (as long as they use separate PAM
   contexts), since the module cache was the only part of OpenPAM that
   was not thread-safe.
============================================================================
OpenPAM Figwort							2005-06-16

 - BUGFIX: Correct several small signedness and initialization bugs
   discovered during review by the NetBSD team.

 - BUGFIX: Modify gendoc.pl to sort cross-references in dictionary
   order within each section.

 - ENHANCE: if a policy specifies a relative module path, prepend the
   module directory so we never call dlopen(3) with a relative path.

 - ENHANCE: add a pam.conf(5) manual page.
============================================================================
OpenPAM Feterita						2005-02-01

 - BUGFIX: Correct numerous markup errors, invalid cross-references,
   and other issues in the manual pages, with kind assistance from
   Ruslan Ermilov <ru@freebsd.org>.

 - BUGFIX: Avoid multiple evaluation of macro arguments in ENTERX()
   and RETURNX() macros.
