@@ -24,6 +24,7 @@ libpam_la_SOURCES = \
 	openpam_restore_cred.c \
 	openpam_set_option.c \
 	openpam_static.c \
+	openpam_subst.c \
 	openpam_ttyconv.c \
 	pam_acct_mgmt.c \
 	pam_authenticate.c \
